02-css/02-basic-layout2/style.css
/* colors:
grey: #606060
potato: #fff1e8;
features: #f0f0f0;
*/


/*===================
GENERAL
===================*/

*, *:before, *:after {
  box-sizing: border-box;
}


/*===================
LAYOUT
===================*/

body {
  width: 100%;
  margin: auto;
  font-family: sans-serif;
}

header {
  width: 100%;
  background-color: #606060;
  height: 100px;
}

article {
  width: 240px;
  /*height: 400px;*/
  float: left;
  background-color: #f0f0f0;
  border-radius: 10px;
  margin: 10px;
  padding: 20px;
}

footer {
  height: 100px;
}

#aboutus {
  background-color: #fff1e8;
  /*padding: 20px;*/
  margin-top: 50px;
  margin-bottom: -15px;
}

/*===================
HEADER
===================*/

nav {
  width: 100%;
}

/*#nav-logo img {

}*/

ul {
  float: right;
  padding: 25px;
  height: 100%;
}

li {
  display: inline;
  padding: 20px;
}

li a {
  text-decoration: none;
  color: white;
  text-transform: uppercase;
}

/*===================
MAIN
===================*/

#hero {
  background-color: #fff1e8;
  padding: 50px 35%;
}

#hero-button {
  border-radius: 10px;
  padding: 10px 50px;
  text-decoration: none;
  color: white;
  background-color: pink;
  margin: 22%;
}

#features {
  /*margin: auto;*/
}

#features-content {
  margin: -30px 500px;
  float: left;
}

#pinky {
  display: block;
  margin: 0px auto;
}

#aboutus-content {
  /*position: relative;*/
  margin: 30px 40%;
}

#aboutus-content p {
  padding: 10px 30%;
  float: right;
  margin-right: -30%;
}

.img-float-left {
  float: left;
  padding: 30px;
  margin-left: -30%;
}

/*===================
FOOTER
===================*/

footer {
  clear: both;
  background-color: #606060;
}

footer p {
  text-align: center;
  padding-top: 45px;
}

